# GLFWNGL

./: .gitignore  CMakeLists.txt  GLFWNGL.pro  README.md
include/: NGLDraw.h
shaders/: PBRFragment.glsl  PBRVertex.glsl  PhongFragment.glsl  PhongVertex.glsl
src/: NGLDraw.cpp  main.cpp
